# Android-Study

./: README.md
compile-set/: README.md  hello-world.arm64  hello-world.c  hello-world.cpp
compile-set/jni/: Android.mk  Application.mk
compile-set/libs/arm64-v8a/: hello
compile-set/libs/armeabi-v7a/: hello
cpp-test/jni/: Android.mk  Application.mk
pcap/: Android.cmake  CMakeLists.txt  interface-list.c
pcap-build/: .gitignore  README.md
pcap-build/jni/: Android.mk  Application.mk  interface-list.c
